--- a/src/main/resources/ui/habits.fxml
+++ b/src/main/resources/ui/habits.fxml
@@ -1,36 +1,48 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Tooltip?>
 
 <VBox xmlns:fx="http://javafx.com/fxml"
       fx:controller="com.echchhit.habittracker.controller.HabitsController"
       spacing="10"
       styleClass="content-area">
 
-    <ComboBox fx:id="monthSelector"
-              prefWidth="160"
-              styleClass="month-selector"/>
+    <HBox alignment="CENTER_LEFT" spacing="10">
+        <ComboBox fx:id="monthSelector"
+                  prefWidth="160"
+                  styleClass="month-selector"/>
+
+        <Region HBox.hgrow="ALWAYS" />
+        <Button fx:id="viewToggleBtn"
+                text="⊞"
+                onAction="#onToggleView"
+                style="-fx-background-color: transparent; -fx-font-size: 18px; -fx-cursor: hand; -fx-text-fill: #666;">
+        <tooltip>
+            <Tooltip text="Switch View"/>
+        </tooltip>
+    </Button>
+    </HBox>
 
     <ScrollPane fitToWidth="true" VBox.vgrow="ALWAYS" style="-fx-background-color: transparent; -fx-background: transparent;">
         <GridPane fx:id="habitGrid"
-                  hgap="6"
-                  vgap="6">
+                  hgap="15"
+                  vgap="15">
             <padding>
                 <Insets top="20" right="20" bottom="20" left="20"/>
             </padding>
         </GridPane>
     </ScrollPane>
 
-    <Button
-            fx:id="addHabitBtn"
+    <Button fx:id="addHabitBtn"
             text="Add Habit"
             onAction="#onAddHabit"
-            prefWidth="120"
-    />
-
+            prefWidth="120" />
 </VBox>
